// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome should render main welcome banner 1`] = `
<img
  alt="Lucky Spin Banner"
/>
`;

exports[`Welcome should render starting game button 1`] = `
<span>
  ui.welcome.play.button.text
</span>
`;

exports[`Welcome should start the game when button clicked 1`] = `
<div>
  <div>
    <div>
      <img
        alt="Lucky Spin Banner"
      />
    </div>
    <div>
      <button
        type="secondary"
      >
        <span>
          ui.welcome.play.button.text
        </span>
      </button>
    </div>
  </div>
</div>
`;
